# ex_pkg

./: README.md  setup.cfg
hello_world/: main.py
