[metadata]
name = toto
version = 1.0.0
description = Trade example
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    hello_world_cli = hello_world.main:main
